--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cow data management",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch src/views/scss:src/views/css"
+
   },
   "repository": {
     "type": "git",
