--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cow data management",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch src/views/scss:src/views/css",
+    "dev": "gulp dev"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,10 @@
   "homepage": "https://github.com/gojideth/ISCow-in#readme",
   "dependencies": {
     "sass": "^1.56.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^5.1.0"
   }
 }
