--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/gojideth/ISCow-in#readme",
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "sass": "^1.56.1"
   },
   "devDependencies": {
