--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch src/views/scss:src/views/css",
-    "dev": "gulp dev"
+    "dev": "gulp dev",
+    "eslint" : "npx eslint src"
   },
   "repository": {
     "type": "git",
