--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch src/views/scss:src/views/css",
-    "dev": "gulp dev"
+    "dev": "gulp dev",
+    "eslint" : "npx eslint src"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^5.1.0"
+    "gulp-sass": "^5.1.0",
+    "eslint": "^8.27.0"
   }
 }
