--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "express": "^4.18.2",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sass": "^1.56.1",
