--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch src/views/scss:src/views/css",
     "dev": "gulp dev",
-    "eslint" : "npx eslint src"
+    "eslint": "npx eslint src"
   },
   "repository": {
     "type": "git",
@@ -26,12 +26,15 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
-    "sass": "^1.56.1"
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sass": "^1.56.1",
+    "sequelize": "^6.25.7"
   },
   "devDependencies": {
+    "eslint": "^8.27.0",
     "gulp": "^4.0.2",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^5.1.0",
-    "eslint": "^8.27.0"
+    "gulp-sass": "^5.1.0"
   }
 }
