--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '1.0'
 services:
   iscow_backend:
     container_name: iscow_backend
-    image: iscow/iscow_template:0.0.2
+    image: iscow/iscow_template:1
     build: 
       context: .
     ports:
@@ -10,22 +10,23 @@ services:
     environment:
       - EXTERNAL_PORT=3001
       - PGUSER=admin
-      - PGPASSWORD=iscowin
-      - PGDATABASE=iscowin
-      - PGHGOST=iscowin_db
+      - PGPASSWORD=xark123
+      - PGDATABASE=db_cows
+      - PGHOST=iscowin_db
     depends_on:
       - iscowin_db
   iscowin_db:
     container_name: iscowin_db
-    image: "postgres:12"   
+    image: "postgres:12"  
+    ports:
+      - "5432:5432" 
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=xark123
       - POSTGRES_DB=db_cows
     volumes:
       - iscowin_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+   
 volumes:
   iscowin_data: {}
 
