--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
-    "datatables.net-bs5": "^1.13.1",
-    "datatables.net-buttons-bs5": "^2.3.3",
-    "sass": "^1.56.1"
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sass": "^1.56.1",
+    "sequelize": "^6.25.7"
   },
   "devDependencies": {
     "eslint": "^8.27.0",
