--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "node": true,
         "es2021": true,
-        "commonjs": true
+        "commonjs": true,
+        "browser": true
     },
     "extends": "eslint:recommended",
     "overrides": [
