--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch src/views/scss:src/views/css",
     "dev": "gulp dev",
-    "eslint": "npx eslint src"
+    "eslint": "npx eslint src",
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,9 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sass": "^1.56.1",
@@ -37,6 +40,7 @@
     "eslint": "^8.27.0",
     "gulp": "^4.0.2",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^5.1.0"
+    "gulp-sass": "^5.1.0",
+    "nodemon": "^2.0.20"
   }
 }
